// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render IncomesSummary with 1 income 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      income
       totalling 
      <span>
        $10.95
      </span>
    </h1>
    <h3
      className="page-header__subtitle"
    >
      <span />
       
      incomes
       not shown.
    </h3>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/createincome"
      >
        Add Income
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render IncomesSummary with multiple incomes 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        2
      </span>
       
      incomes
       totalling 
      <span>
        $1,501.95
      </span>
    </h1>
    <h3
      className="page-header__subtitle"
    >
      <span />
       
      incomes
       not shown.
    </h3>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/createincome"
      >
        Add Income
      </Link>
    </div>
  </div>
</div>
`;
